# chatsky

./: .buildinfo  .coveragerc  .dockerignore  .env.example  .env_file  .gitattributes  .gitignore  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  about_us.html  benchmark_dbs.py  benchmark_new_format.py  benchmark_streamlit.py  bot_test.py  community.html  compose.yml  development.html  docker-compose.yml  dockerfile  downgrade.py  examples.html  genindex.html  get_started.html  index.html  llmslot_test.py  makefile  mutex_queue  mypy.ini  objects.inv  pre-commit.sh  py-modindex.html  pyproject.toml  pytest.ini  rebuild_examples.py  reference.html  requirements.txt  (+15 more)
.doctrees/: about_us.doctree  community.doctree  development.doctree  examples.doctree  get_started.doctree  index.doctree  reference.doctree  tutorials.doctree  user_guides.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  process_github_events.py
_modules/: index.html
_sources/: user_guides.rst.txt
apiref/: chatsky.conditions.service.html  chatsky.conditions.slots.html  chatsky.conditions.standard.html  chatsky.context_storages.database.html  chatsky.context_storages.json.html  chatsky.context_storages.mongo.html  chatsky.context_storages.pickle.html  chatsky.context_storages.protocol.html  chatsky.context_storages.redis.html  chatsky.context_storages.shelve.html  chatsky.context_storages.sql.html  chatsky.context_storages.ydb.html  chatsky.core.context.html  chatsky.core.message.html  chatsky.core.node_label.html  chatsky.core.pipeline.html  chatsky.core.script.html  chatsky.core.script_function.html  chatsky.core.script_parsing.html  chatsky.core.service.actor.html  chatsky.core.service.component.html  chatsky.core.service.extra.html  chatsky.core.service.group.html  chatsky.core.service.service.html  chatsky.core.service.types.html  chatsky.core.transition.html  chatsky.core.utils.html  chatsky.destinations.standard.html  chatsky.messengers.common.interface.html  chatsky.messengers.common.types.html  chatsky.messengers.console.html  chatsky.messengers.telegram.abstract.html  chatsky.messengers.telegram.interface.html  chatsky.processing.slots.html  chatsky.processing.standard.html  chatsky.responses.slots.html  chatsky.responses.standard.html  chatsky.slots.slots.html  chatsky.stats.cli.html  chatsky.stats.default_extractors.html  (+24 more)
chatsky/: __init__.py  __rebuild_pydantic_models__.py  cnd.py  lbl.py  msg.py  rsp.py
dev/: .buildinfo  about_us.html  community.html  development.html  examples.html  genindex.html  get_started.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html  user_guides.html
df_db_connector/: __init__.py  db_connector.py  json_connector.py  mongo_connector.py  pickle_connector.py  protocol.py  protocols.json  redis_connector.py  shelve_connector.py  sql_connector.py  ydb_connector.py
df_engine/: __init__.py  conditions.py  labels.py  responses.py
df_extended_conditions/: conditions.py  dataset.py  utils.py
df_generics/: response.py
df_parser/: __init__.py  distribution_metadata.py  dumpers_loaders.py  parse_utils.py  processors.py
df_pipeline/: __init__.py  conditions.py  messenger_interface.py  types.py
df_runner/: __init__.py  runner.py
df_script_parser/: __init__.py  cli.py  dumpers_loaders.py  parse.py  tools.py
df_script_viewer/: __init__.py  app.py  cli.py  graph.py  image.py  plot.py
df_slots/: __init__.py  handlers.py  root.py  types.py
df_stats/: __init__.py  __main__.py  cli.py  pool.py  record.py  storage.py  subscriber.py
df_telegram_connector/: connector.py  types.py  utils.py
dff/: __init__.py  __rebuild_pydantic_models__.py  caching.py  cnd.py  condition_handlers.py  conditions.py  draft.py  labels.py  lbl.py  msg.py  rsp.py  transitions.py
docs/: conf.py  index.rst  tutor.ipynb
draw.io/: 0_overview.dio  2_context.dio  3_flows.dio  4_dashboard.dio  5_annotations.dio
drawio/: 0_overview.dio  1_installation.dio  3_flows.dio  4_dashboard.dio  5_actor.dio  5_annotations.dio  7_annotations.dio
examples/: .gitignore  1_basic_example.py  2_pre_and_post_processors.py  2_services_advanced.py  3_pipeline_dict_with_services_basic.py  3_pipeline_dict_with_services_full.py  4_groups_and_conditions_basic.py  4_groups_and_conditions_full.py  4_service_groups_advanced.py  5_asynchronous_groups_and_services_basic.py  5_asynchronous_groups_and_services_full.py  5_global_services_basic.py  6_custom_messenger_interface.py  6_global_services_advanced.py  7_extra_handlers_basic.py  7_extra_handlers_full.py  7_wrappers_basic.py  7_wrappers_full.py  8_extra_handlers_and_extensions.py  8_wrappers_and_extensions.py  README.md  _utils.py  basic_example.py  basics.py  buttons.py  cli_runner.py  cli_runner_with_annotators.py  context_serialization.py  custom_functions.py  db.py  default_transitions.py  example.py  example.sh  example_1_basics.py  example_2_conditions.py  example_3_responses.py  example_4_transitions.py  example_5_global_transitions.py  example_6_context_serialization.py  example_7_pre_response_processing.py  (+20 more)
json_import_examples/: README.md
master/: .buildinfo  about_us.html  community.html  development.html  examples.html  genindex.html  get_started.html  index.html  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html  user_guides.html
scripts/: clean.py  codestyle.py  doc.py  misc.py  patch_sphinx.py  switcher_gen.py  test.py  test_and_docs.py  utilities.py  utils.py
superset_dashboard/: metadata.yaml
tests/: conftest.py  db_list.py  opts_off.dot  opts_on.dot  test_actor.py  test_adapt.py  test_caching.py  test_conditions.py  test_context.py  test_dbs.py  test_df_db_connector.py  test_df_generic_response.py  test_df_parser.py  test_df_runner.py  test_df_script_viewer.py  test_df_telegram_connector.py  test_df_turn_cacher.py  test_dialogflow.py  test_examples.py  test_flows.py  test_forms.py  test_handlers.py  test_hf.py  test_integration.py  test_labels.py  test_normalization.py  test_plot.py  test_rasa.py  test_response.py  (+7 more)
(+3256 files in other folders)
