[tool.poetry]
name = "dff"
version = "0.7.1"
description = "This package has been renamed to Chatsky."
license = "Apache-2.0"
authors = [
    "Denis Kuznetsov <kuznetsov.den.p@gmail.com>",
    "Roman Zlobin <RLKRo@proton.me>",
    "Aleksandr Sergeev <shveitsar215@gmail.com>",
    "Daniil Ignatiev <ruthenian8@gmail.com>",
]

readme = "README.md"
homepage = "https://deeppavlov.github.io/dialog_flow_framework/index.html"
repository = "https://github.com/deeppavlov/dialog_flow_framework"
documentation = "https://deeppavlov.github.io/dialog_flow_framework/reference.html"
keywords = ["chatbots"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]



include = [
    { path = "CONTRIBUTING.md" },
    { path = "dff/" },
]
exclude = [
    { path = "tests" },
    { path = "scripts" },
]



[tool.poetry.urls]
"Getting Started" = "https://deeppavlov.github.io/dialog_flow_framework/get_started.html"
"Tutorials" = "https://deeppavlov.github.io/dialog_flow_framework/tutorials.html"
"User Guides" = "https://deeppavlov.github.io/dialog_flow_framework/user_guides.html"
"Examples" = "https://github.com/deeppavlov/dialog_flow_demo"



[tool.poetry.dependencies]
python = "^3.8.1,!=3.9.7"  # `streamlit` package does not support python 3.9.7, `flake8` package does not support python 3.8.0
chatsky = "*"
pydantic = ">=2.0"  # `pydantic` version more than 2 required
nest-asyncio = "*"
typing-extensions = "*"
wrapt = "*"
colorama = "*"
ydb = { version = "*", optional = true }
six = { version = "*", optional = true }
tqdm = { version = "*", optional = true }
motor = { version = "*", optional = true }
redis = { version = "*", optional = true }
pandas = { version = "*", optional = true }
altair = { version = "*", optional = true }
asyncmy = { version = "*", optional = true }
asyncpg = { version = "*", optional = true }
pympler = { version = "*", optional = true }
aiofiles = { version = "*", optional = true }
humanize = { version = "*", optional = true }
aiosqlite = { version = "*", optional = true }
omegaconf = { version = "*", optional = true }
cryptography = { version = "*", optional = true }
requests = { version = "*", optional = true }
pytelegrambotapi = { version = "*", optional = true }
opentelemetry-instrumentation = { version = "*", optional = true }
sqlalchemy = { version = "*", extras = ["asyncio"], optional = true }
opentelemetry-exporter-otlp = { version = ">=1.20.0", optional = true }  # log body serialization is required

[tool.poetry.extras]
json = ["aiofiles"]
pickle = ["aiofiles"]
sqlite = ["sqlalchemy", "aiosqlite"]
redis = ["redis"]
mongodb = ["motor"]
mysql = ["sqlalchemy", "asyncmy", "cryptography"]
postgresql = ["sqlalchemy", "asyncpg"]
ydb = ["ydb", "six"]
telegram = ["pytelegrambotapi"]
stats = ["opentelemetry-exporter-otlp", "opentelemetry-instrumentation", "requests", "tqdm", "omegaconf"]
benchmark = ["pympler", "humanize", "pandas", "altair", "tqdm"]


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
isort = "*"
black = "*"
mypy = "*"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
requests = "*"
idna = "*"
pytest = "*"
pytest-cov = "*"
coverage = { version = "!=7.3.3", extras = ["toml"] }
# Coverage 7.3.3 breaks pragma: no cover -- https://github.com/nedbat/coveragepy/issues/1713
pytest-asyncio = "*"
pytest-virtualenv = "*"
sniffio = "*"
h11 = "*"
aiochclient = "*"
httpx = "*"
sqlparse = "*"
jsonschema = "*"


[tool.poetry.group.devel]
optional = false

[tool.poetry.group.devel.dependencies]
urllib3 = "<2.0"  # ensure dff doesn't update urllib which breaks poetry
python-on-whales = "*"
python-dotenv = "*"
poethepoet = { version = "*", extras = ["poetry_plugin"] }


[tool.poetry.group.tutorials]
optional = true

[tool.poetry.group.tutorials.dependencies]
flask = { version = "*", extras = ["async"] }
psutil = "*"
telethon = "*"
fastapi = "*"
uvicorn = "*"
websockets = "*"
locust = "*"
streamlit = "*"
streamlit-chat = "*"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
nbsphinx = "*"
sphinx-favicon = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
sphinxcontrib-katex = "*"
pydata-sphinx-theme = "*"
sphinxcontrib-apidoc = "*"
sphinxcontrib-httpdomain = "*"
sphinx-autodoc-typehints = "*"
jupytext = "*"
jupyter = "*"



[tool.poetry.scripts]
"dff.stats" = { callable = "dff.stats.__main__:main", extras = ["stats"] }



[tool.poe]
default_task_type = "script"

[tool.poe.tasks]
info = "scripts.misc:info"
flake = "scripts.codestyle:_run_flake"
black = "scripts.codestyle:_run_black(modify=False)"
lint.sequence = ["flake", "black"]
lint.ignore_fail = "return_non_zero"
format = "scripts.codestyle:_run_black(modify=True)"
clean_docs = "scripts.clean:clean_docs"
clean = "scripts.clean:clean"
test_no_cov = "scripts.test:test_no_cov"
test_no_deps = "scripts.test:test_no_deps"
test_all = "scripts.test:test_all"
docs = "scripts.doc:docs"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.isort]
profile = "black"



[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "docker: marks tests as requiring docker containers to work",
    "telegram: marks tests as requiring telegram client API token to work",
    "slow: marks tests as slow (taking more than a minute to complete)",
    "no_coverage: tests that either cannot run inside the `coverage` workflow or do not affect coverage stats",
    "all: reserved by allow-skip",
    "none: reserved by allow-skip",
]


[tool.coverage.run]
concurrency = [
    "thread",
    "greenlet",
    ]


[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain if tests don't cover raising errors:
    "raise .*",
    # Don't complain if tests don't cover error handling:
    "except .*",
    ]
